crates/capsec/tests/compile_fail/dual_key_cap_is_not_send.rs
/// DualKeyCap<P> is !Send — use make_send() for cross-thread transfer.
use capsec::prelude::*;

fn assert_send<T: Send>() {}

fn main() {
    assert_send::<DualKeyCap<FsRead>>();
}
